handle preserving uploaded files order